--- a/6/examples/index.html
+++ b/6/examples/index.html
@@ -248,7 +248,7 @@
     </section>
 
     <section>
-        <h3 id="minimum-setup">Minimum Setup <a class="anchorjs-link" aria-label="Anchor" href="#minimum-setup"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="minimum-setup">Minimum Setup <a class="anchor-link" aria-label="Anchor" href="#minimum-setup"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             All you need is an element to attach the picker to.
@@ -312,7 +312,7 @@
 
     <section>
         <h3 id="simple-setup">Simple Setup
-            <a class="anchorjs-link" aria-label="Anchor" href="#simple-setup">
+            <a class="anchor-link" aria-label="Anchor" href="#simple-setup">
                 <i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
             <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small>
 
@@ -399,7 +399,7 @@
     </section>
 
     <section>
-        <h3 id="locales">Using Locales <a class="anchorjs-link" aria-label="Anchor" href="#locales"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="locales">Using Locales <a class="anchor-link" aria-label="Anchor" href="#locales"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             You can provide localization options to override the tooltips as well as the day/month display.
@@ -555,7 +555,7 @@
     </section>
 
     <section>
-        <h3 id="time-only">Time Only <a class="anchorjs-link" aria-label="Anchor" href="#time-only"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="time-only">Time Only <a class="anchor-link" aria-label="Anchor" href="#time-only"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             Version 6 no longer uses MomentJs so selecting the what to display is now done via the
@@ -662,7 +662,7 @@
     </section>
 
     <section>
-        <h3 id="date-only">Date Only <a class="anchorjs-link" aria-label="Anchor" href="#date-only"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="date-only">Date Only <a class="anchor-link" aria-label="Anchor" href="#date-only"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             Version 6 no longer uses MomentJs so selecting what to display is now done via the
@@ -768,7 +768,7 @@
     </section>
 
     <section>
-        <h3 id="input-only">Input Only <a class="anchorjs-link" aria-label="Anchor" href="#simple-setup"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="input-only">Input Only <a class="anchor-link" aria-label="Anchor" href="#simple-setup"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             An input group and icon are not required for the picker to function, you can also simply use an input field.
@@ -843,7 +843,7 @@
     </section>
 
     <section>
-        <h3 id="enabledDisabled-dates">Enabled/Disabled Dates <a class="anchorjs-link" aria-label="Anchor" href="#simple-setup"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="enabledDisabled-dates">Enabled/Disabled Dates <a class="anchor-link" aria-label="Anchor" href="#simple-setup"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             You can provide an array of dates to enable or dates to disable.
@@ -941,7 +941,7 @@
     </section>
 
     <section>
-        <h3 id="linked-pickers">Linked pickers <a class="anchorjs-link" aria-label="Anchor" href="#linked-pickers"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="linked-pickers">Linked pickers <a class="anchor-link" aria-label="Anchor" href="#linked-pickers"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             You can use event listeners or the subscribe method to link two pickers together. For example, a hotel stay
@@ -1109,7 +1109,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id="custom-icons">Custom Icons <a class="anchorjs-link" aria-label="Anchor" href="#custom-icons"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="custom-icons">Custom Icons <a class="anchor-link" aria-label="Anchor" href="#custom-icons"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             You can change the icons from the Font Awesome default to another icon
@@ -1228,7 +1228,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id="view-mode">View Mode <a class="anchorjs-link" aria-label="Anchor" href="#view-mode"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="view-mode">View Mode <a class="anchor-link" aria-label="Anchor" href="#view-mode"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             The view mode options allows you to show a different initial view. For example selecting a date of birth.
@@ -1316,7 +1316,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id="min-view-mode">Minimum View <a class="anchorjs-link" aria-label="Anchor" href="#min-view-mode"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="min-view-mode">Minimum View <a class="anchor-link" aria-label="Anchor" href="#min-view-mode"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             You can set the minimum view mode by turning off lower level components. If you only want your user to
@@ -1420,7 +1420,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id="disabled-days-of-the-week">Disabled Days of the Week <a class="anchorjs-link" aria-label="Anchor" href="#disabled-days-of-the-week"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="disabled-days-of-the-week">Disabled Days of the Week <a class="anchor-link" aria-label="Anchor" href="#disabled-days-of-the-week"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             This is the simplest setup you can have with Bootstrap and Font Awesome 5. The picker defaults to FA 5 Solid
@@ -1509,7 +1509,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id="inline">Inline <a class="anchorjs-link" aria-label="Anchor" href="#inline"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="inline">Inline <a class="anchor-link" aria-label="Anchor" href="#inline"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             You can also use the picker inline
@@ -1578,7 +1578,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id="multidate">Multiple Dates <a class="anchorjs-link" aria-label="Anchor" href="#multidate"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="multidate">Multiple Dates <a class="anchor-link" aria-label="Anchor" href="#multidate"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             The picker allows for multiple dates to be selected.
@@ -1667,7 +1667,7 @@ const subscription = linked2.subscribe(tempusDominus.Namespace.events.change, (e
     </section>
 
     <section>
-        <h3 id="setting-options">Update options <a class="anchorjs-link" aria-label="Anchor" href="#setting-options"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="setting-options">Update options <a class="anchor-link" aria-label="Anchor" href="#setting-options"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             You can provide a new set of options by calling <code>updateOptions([newOptions])</code>. This function also
@@ -1780,7 +1780,7 @@ changeOptionsButton.addEventListener('click', () =&gt; {
     </section>
 
     <section>
-        <h3 id="container-option">Example with container parameter<a class="anchorjs-link" aria-label="Anchor" href="#container-option"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
+        <h3 id="container-option">Example with container parameter<a class="anchor-link" aria-label="Anchor" href="#container-option"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a> <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small></h3>
 
         <p>
             All you need is an element to attach the picker to and a parent container.
@@ -1855,14 +1855,14 @@ new tempusDominus.TempusDominus(document.getElementById('containerDatePicker'), 
 
     <section id="plugins-example">
         <h3>Plugins
-            <a class="anchorjs-link" aria-label="Anchor" href="#plugins-example">
+            <a class="anchor-link" aria-label="Anchor" href="#plugins-example">
                 <i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
             <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small>
         </h3>
 
         <p>
             Plugins allow you to extend the picker by adding new functionality to either Tempus Dominus globally,
-            the plugin or by overwritting existing functionality. Check the events tab to see the logs.
+            the plugin or by overwriting existing functionality. Check the events tab to see the logs.
         </p>
 
         <div class="code-blocks d-none">
@@ -1922,6 +1922,7 @@ const doLog = (value)=&gt;
 	  'log',
 	  `from plugin:`, value);
 };
+
 loadPluginButton.addEventListener('click', () =&gt; {
 	const script = document.createElement('script');
 	script.onload = function () {
@@ -1972,6 +1973,7 @@ loadPluginButton.addEventListener('click', () =&gt; {
                     'log',
                     `from plugin:`, value);
             };
+
             loadPluginButton.addEventListener('click', () => {
                 const script = document.createElement('script');
                 script.onload = function () {
@@ -1985,6 +1987,129 @@ loadPluginButton.addEventListener('click', () =&gt; {
 
                 document.body.appendChild(script);
             });
+        </script>
+    </section>
+
+    <section id="picker-functions">
+        <h3>Picker Functions
+            <a class="anchor-link" aria-label="Anchor" href="#picker-functions">
+                <i class="fa-solid fa-anchor" aria-hidden="true"></i></a>
+            <small class="show-code" title="View Code"><i class="fa-solid fa-code" aria-hidden="true"></i></small>
+        </h3>
+
+        <p>
+            Click <i class="fa-solid fa-code" aria-hidden="true"></i> to view the code and the log.
+            Clicking the buttons below will log the results there.
+        </p>
+
+        <div class="code-blocks d-none">
+            <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="pickerFunctionsHtml-tab" data-bs-toggle="tab" data-bs-target="#pickerFunctionsHtml" type="button" role="tab" aria-controls="pickerFunctionsHtml" aria-selected="true">HTML
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="pickerFunctionsJs-tab" data-bs-toggle="tab" data-bs-target="#pickerFunctionsJs" type="button" role="tab" aria-controls="pickerFunctionsJs" aria-selected="false">Javascript
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="pickerFunctionsLog-tab" data-bs-toggle="tab" data-bs-target="#pickerFunctionsLog" type="button" role="tab" aria-controls="pickerFunctionsLog" aria-selected="false">Events
+                    </button>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane fade show active" id="pickerFunctionsHtml" role="tabpanel" aria-labelledby="pickerFunctionsHtml-tab">
+         <pre>           <code class="language-html">
+ &lt;div
+     class='input-group'
+     id='pickerFunctions'
+     data-td-target-input='nearest'
+     data-td-target-toggle='nearest'
+ &gt;
+   &lt;input
+     id='pickerFunctionsInput'
+     type='text'
+     class='form-control'
+     data-td-target='#pickerFunctions'
+   /&gt;
+   &lt;span
+     class='input-group-text'
+     data-td-target='#pickerFunctions'
+     data-td-toggle='datetimepicker'
+   &gt;
+     &lt;span class='fa-solid fa-calendar'&gt;&lt;/span&gt;
+   &lt;/span&gt;
+ &lt;/div&gt;
+           </code>
+         </pre>
+                </div>
+                <div class="tab-pane fade" id="pickerFunctionsJs" role="tabpanel" aria-labelledby="pickerFunctionsJs-tab">
+         <pre>           <code class="language-javascript">
+ new tempusDominus.TempusDominus(document.getElementById('pickerFunctions'));
+           </code>
+         </pre>
+                </div>
+                <div class="tab-pane fade logger" id="pickerFunctionsLog" role="tabpanel" aria-labelledby="pickerFunctionsLog-tab">
+                    <div class="alert alert-info">
+                        Events will display as you manipulate the picker.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <label for="pickerFunctionsInput" class="form-label">Functions</label>
+                    <div class="input-group log-event" id="pickerFunctions" data-td-target-input="nearest" data-td-target-toggle="nearest">
+                        <input id="pickerFunctionsInput" type="text" class="form-control" data-td-target="#pickerFunctions">
+                        <span class="input-group-text" data-td-target="#pickerFunctions" data-td-toggle="datetimepicker">
+                            <span class="fa-solid fa-calendar"></span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-sm-6">
+                    <button id="getDate" class="btn btn-primary me-3">Get Date</button>
+                    <button id="setDate" class="btn btn-primary">Set Date to 2022-05-10</button>
+                </div>
+            </div>
+        </div>
+
+        <script type="text/javascript">
+            const functionLog = (prefix, value) => {
+                logger(document.getElementById('picker-functions').getElementsByClassName('logger')[0],
+                    'log',
+                    prefix,
+                    value);
+            };
+
+            const pickerFunctions = new tempusDominus.TempusDominus(document.getElementById('pickerFunctions'), {
+                multipleDates: true,
+                display: {
+                    components: {
+                        clock: false
+                    }
+                }
+            });
+
+            document.getElementById('getDate').addEventListener('click', () => {
+                //logs all selected dates
+                functionLog('all selected', JSON.stringify(pickerFunctions.dates.picked, null, 2));
+                //logs the last selected
+                functionLog('last selected', pickerFunctions.dates.lastPicked);
+                //logs the selected index. This will always be 0 if multipleDates is false
+                functionLog('last selected index', pickerFunctions.dates.lastPickedIndex);
+            });
+
+            document.getElementById('setDate').addEventListener('click', () => {
+                //parseInput will attempt to turn strings and Date objects to a DateTime object.
+                const parsedDate = pickerFunctions.dates.parseInput(new Date(2020, 4, 10));
+                //if multipleDates is false, the second parameter is not required.
+                pickerFunctions.dates.setValue(parsedDate, pickerFunctions.dates.lastPickedIndex);
+            });
+
         </script>
     </section>
 
