--- a/6/namespace/events.html
+++ b/6/namespace/events.html
@@ -250,7 +250,7 @@ interface BaseEvent {
 }
     </code>
   </pre>
-    <h2 id="change">change.td <a class="anchorjs-link" aria-label="Anchor" href="#change"><i class="fas fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id="change">change.td <a class="anchor-link" aria-label="Anchor" href="#change"><i class="fas fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Emit when the date selection is changed.
     </p>
@@ -263,7 +263,7 @@ interface ChangeEvent extends BaseEvent {
 }
     </code>
   </pre>
-    <h2 id="update">update.td <a class="anchorjs-link" aria-label="Anchor" href="#update"><i class="fas fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id="update">update.td <a class="anchor-link" aria-label="Anchor" href="#update"><i class="fas fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Emits when the view changes for example from month view to the year view.
     </p>
@@ -273,7 +273,7 @@ interface ViewUpdateEvent extends BaseEvent {
 }
     </code>
   </pre>
-    <h2 id="error">error.td <a class="anchorjs-link" aria-label="Anchor" href="#error"><i class="fas fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id="error">error.td <a class="anchor-link" aria-label="Anchor" href="#error"><i class="fas fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Emits when a selected date or value from the input field fails to meet the provided validation rules.
     </p>
@@ -285,11 +285,11 @@ interface FailEvent extends BaseEvent {
 }
     </code>
   </pre>
-    <h2 id="show">show.td <a class="anchorjs-link" aria-label="Anchor" href="#show"><i class="fas fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id="show">show.td <a class="anchor-link" aria-label="Anchor" href="#show"><i class="fas fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Emits when then picker widget is displayed.
     </p>
-    <h2 id="hide">hide.td <a class="anchorjs-link" aria-label="Anchor" href="#hide"><i class="fas fa-anchor" aria-hidden="true"></i></a></h2>
+    <h2 id="hide">hide.td <a class="anchor-link" aria-label="Anchor" href="#hide"><i class="fas fa-anchor" aria-hidden="true"></i></a></h2>
     <p>
       Emits when the picker widget is hidden.
     </p>
